--- a/front/package.json
+++ b/front/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-modal": "^3.16.1",
     "react-native-svg": "^13.7.0",
     "react-router-dom": "^6.6.2",
     "react-scripts": "5.0.1",
